# CXXAutomata

./: CMakeLists.txt  README.md
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml
Src/Automaton/: Automaton.cpp  Automaton.hpp
Src/Common/: Typedefs.hpp  Utilities.hpp
Src/Exceptions/: Exceptions.cpp  Exceptions.hpp
Src/FA/: DFA.cpp  DFA.hpp  FA.cpp  FA.hpp  NFA.cpp  NFA.hpp
Test/: main.cpp  testDFA.cpp  testFA.cpp
